--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Build
         working-directory: .
         run:
-          docker build -t eloiblt/ubuntu-custom-image  .
+          docker build -t ghcr.io/eloiblt/ubuntu-custom-image  .
 
       - name: Push
         working-directory: .
-        run: docker push eloiblt/ubuntu-custom-image
+        run: docker push ghcr.io/eloiblt/ubuntu-custom-image
