--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,36 @@ jobs:
       - name: Login to GitHub Container Registry
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u eloiblt --password-stdin
 
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v3.0.3
+
+      - name: Determine Version
+        id: version_step # step id used as reference for output values
+        uses: gittools/actions/gitversion/execute@v3.0.3
+
+      - name: Display GitVersion outputs
+        run: |
+          echo "SemVer: ${{ steps.version_step.outputs.semVer }}"
+
+      - name: Create tag
+        uses: actions/github-script@v3
+        with:
+          script: |
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/v${{ steps.version_step.outputs.semVer }}",
+              sha: context.sha
+            })
+
       - name: Build
         working-directory: .
         run:
-          docker build -t ghcr.io/eloiblt/ubuntu-custom-image  .
+          docker build -t tmp  .
+
+      - name: Tag
+        run:
+          docker tag -t tmp  .
 
       - name: Push
         working-directory: .
